--- a/crime_tidymodels.Rmd
+++ b/crime_tidymodels.Rmd
@@ -28,7 +28,7 @@ train %>% head()
 ```
 
 * recipe之前的预处理：
-生成一些recipe的step没有办法生成或难以生成的变量，其他尽量放在recipe中处理
+生成一些recipe的step没有办法生成或难以生成的变量
 删除缺失值后再抽样
 类型转换可以放到recipe当中
 
@@ -46,7 +46,8 @@ train %>%
   mutate(Hour = if_else(AP == "PM", hour(Time) + 12, hour(Time))) %>% # recipe没有关于time的处理工具
   mutate(Block_type = str_split(Block, " ")) %>% 
   mutate(Block_type = sapply(Block_type, function(x) last(unlist(x)))) %>% 
-  select(-c(V1, `Case Number`, IUCR, `FBI Code`, `X Coordinate`, `Y Coordinate`, `Updated On`, Location, Block, Time, AP, Year)) %>% 
+  select(-c(V1, `Case Number`, IUCR, `FBI Code`, `X Coordinate`, `Y Coordinate`, `Updated On`, 
+            Location, Block, Time, AP, Year)) %>% 
   mutate(across(where(is.double) & !c("Latitude", "Longitude", "Date"), as.integer),
          across(where(is.character) | where(is.logical), as.factor)) %>% 
   arrange(Date) -> train_sample
@@ -55,85 +56,96 @@ train %>%
 train_sample %>% head()
 dim(train_sample)
 object_size(train_sample)
+
+# 删除对象
+rm(train)
+gc()
 ```
 
 * tidymodels预处理部分：尽可能将过程放入这里
 
 ```{r}
 # 使用recipe建立处理过程
-crime_rec <- recipe(Arrest ~ ., data = train_sample) %>% 
+train_rec <- recipe(Arrest ~ ., data = train_sample) %>% 
   update_role(ID, new_role = "ID") %>% 
   update_role(Date, new_role = "Date") %>% 
-  step_other(Block_type, Primary_type, threshold = 0.001, other = "OTHER_TYPE") %>%             # 前期探索分析确定
-  step_other(Description, Location_Description, threshold = 0.002, other = "OTHER_TYPE") %>%    # 前期探索分析确定
-  step_date(Date, features = c("dow", "month"), label = FALSE) %>%                              # 只保留数字
+  step_other(Block_type, Primary_type, threshold = 0.001, other = "OTHER_TYPE") %>%           # 前期探索分析确定
+  step_other(Description, Location_Description, threshold = 0.002, other = "OTHER_TYPE") %>%  # 前期探索分析确定
+  step_date(Date, features = c("dow", "month"), label = FALSE) %>%                            # 只保留数字
   step_novel(all_nominal_predictors()) %>% # 生成一个新类型
   step_dummy(all_nominal_predictors()) %>% # 生成double类型数据
-  step_mutate_at(where(is.double) & !c("Latitude", "Longitude", "Date"), fn = as.integer)
+  step_mutate_at(where(is.double) & !c("Latitude", "Longitude", "Date"), fn = as.integer)     # 解决dummy后二分数据为double的问题
 
 # 查看结果
-crime_rec
+train_rec
 ```
 
 ```{r}
 # 预处理过程训练
-crime_prep <- prep(crime_rec) # 注意变量命名规范
-crime_prep
-tidy(crime_prep)
-summary(crime_prep)
+train_prep <- prep(train_rec, training = train_sample) # 注意变量命名规范
+train_prep
+tidy(train_prep)
+summary(train_prep)
 ```
 
 ```{r}
 # 将转换用在训练数据或者新数据上
-crime_bake <- bake(crime_prep, new_data = NULL) # 用在训练集上
-crime_bake %>% head()
-object_size(crime_bake)
+train_bake <- bake(train_prep, new_data = NULL) # 用在训练集上，因为上一步prep中已经处理了训练集，因此为NULL
+train_bake %>% head()
+object_size(train_bake)
 ```
-
-```{r}
-# 查看转换后的结果
-# crime_juice <- juice(crime_prep)
-# crime_juice
-# object_size(crime_juice)
-# identical(crime_bake, crime_juice) # 和bake的效果一样
-```
-
 
 ```{r}
 # 模型设定
-rand_forest(trees = 100) %>% # 设定通用参数，共三个
+rand_forest(trees = 100) %>% # 设定通用参数，共三个，其他保持默认
   set_engine("ranger", seed = 100, num.threads = 12, verbose = TRUE) %>%  # 设定每个库对应的参数
   set_mode("classification") -> rf_model
 rf_model
-
-# 模型训练
-# rf_model_fit <- rf_model %>% fit(Arrest ~ ., data = train_sample) # 没有做recipe的预处理转换
-# rf_model_fit
 ```
 
 ```{r}
 # 建立工作流
 rf_wf <- workflow() %>% 
-  add_recipe(crime_rec) %>%
+  add_recipe(train_rec) %>%
   add_model(rf_model)
-rf_wf
 
 # 用工作流拟合训练数据
+set.seed(100)
+tic()
 rf_wf_fit <- rf_wf %>% fit(data = train_sample) # fit = prep + bake
+toc()
+
+# 查看结果
+rf_wf
 rf_wf_fit
+rf_wf_fit %>% pull_workflow_fit()
 ```
 
 * 实现K折交叉检验：先不管年份
 
 ```{r}
 set.seed(100)
-cv_5 <- vfold_cv(train_sample, v = 5)
+cv_5 <- vfold_cv(train_sample, v = 5, strata = Arrest)
 cv_5
-rf_wf_cv_5 <- rf_wf %>% fit_resamples(cv_5)
 ```
 
 ```{r}
-# 查看结果:要确定如何设定正样本
+# 重抽样计算
+ctrl <- control_resamples(verbose = TRUE, event_level = "second", allow_par = TRUE, parallel_over = "everything")
+cl <- makeCluster(12)
+registerDoParallel(cl)
+set.seed(100)
+tic()
+rf_wf_cv_5 <- rf_wf %>% fit_resamples(resamples = cv_5, 
+                                      metrics = metric_set(roc_auc),
+                                      control = ctrl)
+toc()
+stopCluster(cl)
+```
+
+
+```{r}
+# 查看结果
 rf_wf_cv_5 %>% collect_metrics()
 ```
 
@@ -145,33 +157,150 @@ https://rsample.tidymodels.org/reference/slide-resampling.html
 
 ```{r}
 # 划分数据集
-train_sample %>% 
-  arrange(Date) %>% 
-  sliding_period(index = Date, period = "year", lookback = 3, assess_stop = 2) -> cv_rolling
+cv_rolling <- train_sample %>% sliding_period(index = Date, period = "year", lookback = 3, assess_stop = 2) 
 cv_rolling$splits
 ```
 
 ```{r}
 # 重抽样检验
-keep_pred <- control_resamples(save_pred = TRUE, verbose = TRUE, allow_par = TRUE, parallel_over = "everything")
-registerDoParallel(cores = 12)
+cl <- makeCluster(12)
+registerDoParallel(cl)
 set.seed(100)
 tic()
-rf_wf_cv_rolling <- rf_wf %>% fit_resamples(resamples = cv_rolling, control = keep_pred)
+rf_wf_cv_rolling <- rf_wf %>% fit_resamples(resamples = cv_rolling, 
+                                            metrics = metric_set(roc_auc), 
+                                            control = ctrl)
 toc()
-stopImplicitCluster()
-```
-
-```{r}
-set.seed(100)
-tic()
-rf_wf_cv_rolling <- rf_wf %>% fit_resamples(resamples = cv_rolling, control = keep_pred)
-toc()
+stopCluster(cl)
 ```
 
 
 ```{r}
+# 观察性能
 rf_wf_cv_rolling %>% collect_metrics()
 ```
 
+* 超参数调整:
+
+Grid search:
+tune_grid
+
+Regular grids：
+grid_regular：可以实现等距空间网格
+crossing：给定参数组合
+
+Irregular grids：
+grid_random
+grid_latin_hypercube
+
+
+Iterative search:
+tune_bayes()
+
+```{r}
+# 设定需要调整的参数：某些参数可能需要finalize或update确定范围
+rand_forest(trees = 100, min_n = tune(), mtry = tune()) %>%
+  set_engine("ranger", seed = 100, num.threads = 12, verbose = TRUE) %>%  # 设定每个库对应的参数
+  set_mode("classification") -> rf_model_tune
+rf_model_tune
+parameters(rf_model_tune) # 有一个参数范围待确定
+```
+
+```{r}
+# 建立调参工作流
+workflow() %>% 
+  add_recipe(train_rec) %>% 
+  add_model(rf_model_tune) -> rf_wf_tune
+rf_wf_tune
+```
+
+```{r}
+# 设定范围和间隔
+regular_grid <- grid_regular(
+  mtry(range = c(1, 70)),
+  min_n(range = c(5, 10)),
+  levels = 3
+  )
+regular_grid
+
+# 设定范围和间隔，在给定范围中进行随机抽样
+random_grid <- grid_random(
+  mtry(c(1, 70)),
+  min_n(c(5, 10)),
+  size = 4
+  )
+random_grid
+
+# 直接给定数据点
+cross_grid <- crossing(
+  min_n = c(5, 10),
+  mtry = c(5, 10)
+)
+cross_grid
+
+# 确定经过预处理后的参数的范围：貌似不能确定
+workflow() %>% 
+  add_recipe(train_rec) %>% 
+  add_model(rf_model_tune) %>% 
+  parameters() %>% 
+  finalize(train_sample) -> finalize_param # 不能指定
+finalize_param
+finalize_param %>% pull_dials_object("mtry")
+finalize_param %>% pull_dials_object("min_n")
+
+workflow() %>% 
+  add_recipe(train_rec) %>% 
+  add_model(rf_model_tune) %>% 
+  parameters() %>% 
+  update(mtry = mtry(c(1, 143))) -> finalize_param # 手工update
+finalize_param %>% pull_dials_object("mtry")
+
+# 根据finalize得到的范围自动选择，finalize的结果要正确
+finalize_param %>% grid_regular(levels = 3)
+finalize_param %>% grid_regular(levels = c(min_n = 2, mtry = 5))
+finalize_param %>% grid_regular(min_n(), mtry(), levels = 3)
+```
+
+
+```{r}
+# 参数调整
+cl <- makeCluster(12)
+registerDoParallel(cl)
+set.seed(100)
+tic()
+rf_wf_tune_res <- tune_grid(object = rf_wf_tune,
+                            resamples = cv_rolling,
+                            grid = 10,
+                            control = ctrl,
+                            metrics = metric_set(roc_auc)
+                            )
+toc()
+stopCluster(cl)
+```
+
+```{r}
+# 查看结果：mtry范围正确
+rf_wf_tune_res %>% collect_metrics() %>% arrange(mtry)
+rf_wf_tune_res %>% select_best("roc_auc")
+rf_wf_tune_res %>% show_best("roc_auc", n = 3)  # 最好的n个结果
+```
+
+
+```{r}
+# 将最优结果用在全部训练数据上，得到最终模型
+rf_wf_final <- rf_wf_tune %>% finalize_workflow(select_best(rf_wf_tune_res))
+rf_wf_final
+rf_wf_final_fit <- rf_wf_final %>% fit(train_sample)
+rf_wf_final_fit %>% pull_workflow_fit()
+```
+
+```{r}
+# 保存模型
+saveRDS(rf_wf_final_fit, "rf_wf_final_fit.rds")
+```
+
+
+```{r}
+rf_wf_final_fit %>% pull_workflow_prepped_recipe()
+```
 
