--- a/crime_tidymodels.Rmd
+++ b/crime_tidymodels.Rmd
@@ -50,6 +50,7 @@ train %>%
             Location, Block, Time, AP, Year)) %>% 
   mutate(across(where(is.double) & !c("Latitude", "Longitude", "Date"), as.integer),
          across(where(is.character) | where(is.logical), as.factor)) %>% 
+  mutate(Arrest = fct_relevel(Arrest, "TRUE")) %>% 
   arrange(Date) -> train_sample
 
 # 查看结果
@@ -69,10 +70,10 @@ gc()
 train_rec <- recipe(Arrest ~ ., data = train_sample) %>% 
   update_role(ID, new_role = "ID") %>% 
   update_role(Date, new_role = "Date") %>% 
+  step_novel(all_nominal_predictors()) %>%   # 生成一个新类型，放在前面
   step_other(Block_type, Primary_type, threshold = 0.001, other = "OTHER_TYPE") %>%           # 前期探索分析确定
   step_other(Description, Location_Description, threshold = 0.002, other = "OTHER_TYPE") %>%  # 前期探索分析确定
   step_date(Date, features = c("dow", "month"), label = FALSE) %>%                            # 只保留数字
-  step_novel(all_nominal_predictors()) %>% # 生成一个新类型
   step_dummy(all_nominal_predictors()) %>% # 生成double类型数据
   step_mutate_at(where(is.double) & !c("Latitude", "Longitude", "Date"), fn = as.integer)     # 解决dummy后二分数据为double的问题
 
@@ -82,31 +83,35 @@ train_rec
 
 ```{r}
 # 预处理过程训练
-train_prep <- prep(train_rec, training = train_sample) # 注意变量命名规范
-train_prep
-tidy(train_prep)
-summary(train_prep)
+# train_prep <- prep(train_rec, training = train_sample) # 注意变量命名规范
+# train_prep
+# tidy(train_prep)
+# summary(train_prep)
 ```
+
 
 ```{r}
 # 将转换用在训练数据或者新数据上
-train_bake <- bake(train_prep, new_data = NULL) # 用在训练集上，因为上一步prep中已经处理了训练集，因此为NULL
-train_bake %>% head()
-object_size(train_bake)
+# train_bake <- bake(train_prep, new_data = NULL) # 用在训练集上，因为上一步prep中已经处理了训练集，因此为NULL
+# train_bake %>% head()
+# object_size(train_bake)
 ```
+
 
 ```{r}
 # 模型设定
 rand_forest(trees = 100) %>% # 设定通用参数，共三个，其他保持默认
   set_engine("ranger", seed = 100, num.threads = 12, verbose = TRUE) %>%  # 设定每个库对应的参数
   set_mode("classification") -> rf_model
+
+# 查看结果
 rf_model
 ```
 
 ```{r}
 # 建立工作流
 rf_wf <- workflow() %>% 
-  add_recipe(train_rec) %>%
+  add_recipe(train_rec, blueprint = hardhat::default_recipe_blueprint(allow_novel_levels = TRUE)) %>%
   add_model(rf_model)
 
 # 用工作流拟合训练数据
@@ -124,6 +129,7 @@ rf_wf_fit %>% pull_workflow_fit()
 * 实现K折交叉检验：先不管年份
 
 ```{r}
+# 建立K折数据
 set.seed(100)
 cv_5 <- vfold_cv(train_sample, v = 5, strata = Arrest)
 cv_5
@@ -208,9 +214,8 @@ parameters(rf_model_tune) # 有一个参数范围待确定
 
 ```{r}
 # 建立调参工作流
-workflow() %>% 
-  add_recipe(train_rec) %>% 
-  add_model(rf_model_tune) -> rf_wf_tune
+rf_wf %>% 
+  update_model(rf_model_tune) -> rf_wf_tune
 rf_wf_tune
 ```
 
@@ -218,7 +223,7 @@ rf_wf_tune
 # 设定范围和间隔
 regular_grid <- grid_regular(
   mtry(range = c(1, 70)),
-  min_n(range = c(5, 10)),
+  min_n(range = c(1, 20)),
   levels = 3
   )
 regular_grid
@@ -226,51 +231,49 @@ regular_grid
 # 设定范围和间隔，在给定范围中进行随机抽样
 random_grid <- grid_random(
   mtry(c(1, 70)),
-  min_n(c(5, 10)),
-  size = 4
+  min_n(c(1, 20)),
+  size = 10
   )
 random_grid
 
 # 直接给定数据点
 cross_grid <- crossing(
-  min_n = c(5, 10),
-  mtry = c(5, 10)
+  mtry = c(1, 70),
+  min_n = c(1, 20)
 )
 cross_grid
 
 # 确定经过预处理后的参数的范围：貌似不能确定
-workflow() %>% 
-  add_recipe(train_rec) %>% 
-  add_model(rf_model_tune) %>% 
-  parameters() %>% 
-  finalize(train_sample) -> finalize_param # 不能指定
-finalize_param
-finalize_param %>% pull_dials_object("mtry")
-finalize_param %>% pull_dials_object("min_n")
+# rf_wf_tune %>% 
+#   parameters() %>% 
+#   finalize(train_sample) -> finalize_param # 不能指定
+# finalize_param
+# finalize_param %>% pull_dials_object("mtry")
+# finalize_param %>% pull_dials_object("min_n")
 
 workflow() %>% 
   add_recipe(train_rec) %>% 
   add_model(rf_model_tune) %>% 
   parameters() %>% 
-  update(mtry = mtry(c(1, 143))) -> finalize_param # 手工update
+  update(mtry = mtry(c(1, 70))) -> finalize_param # 手工update
 finalize_param %>% pull_dials_object("mtry")
 
 # 根据finalize得到的范围自动选择，finalize的结果要正确
 finalize_param %>% grid_regular(levels = 3)
-finalize_param %>% grid_regular(levels = c(min_n = 2, mtry = 5))
+finalize_param %>% grid_regular(levels = c(min_n = 3, mtry = 5))
 finalize_param %>% grid_regular(min_n(), mtry(), levels = 3)
 ```
 
 
 ```{r}
-# 参数调整
+# 参数调整：非常耗时
 cl <- makeCluster(12)
 registerDoParallel(cl)
 set.seed(100)
 tic()
 rf_wf_tune_res <- tune_grid(object = rf_wf_tune,
                             resamples = cv_rolling,
-                            grid = 10,
+                            grid = 20,
                             control = ctrl,
                             metrics = metric_set(roc_auc)
                             )
@@ -280,9 +283,9 @@ stopCluster(cl)
 
 ```{r}
 # 查看结果：mtry范围正确
-rf_wf_tune_res %>% collect_metrics() %>% arrange(mtry)
+rf_wf_tune_res %>% collect_metrics()
 rf_wf_tune_res %>% select_best("roc_auc")
-rf_wf_tune_res %>% show_best("roc_auc", n = 3)  # 最好的n个结果
+# rf_wf_tune_res %>% show_best("roc_auc", n = 3)  # 最好的n个结果
 ```
 
 
@@ -292,15 +295,11 @@ rf_wf_final <- rf_wf_tune %>% finalize_workflow(select_best(rf_wf_tune_res))
 rf_wf_final
 rf_wf_final_fit <- rf_wf_final %>% fit(train_sample)
 rf_wf_final_fit %>% pull_workflow_fit()
+rf_wf_final_fit %>% pull_workflow_prepped_recipe()
 ```
 
 ```{r}
 # 保存模型
 saveRDS(rf_wf_final_fit, "rf_wf_final_fit.rds")
-```
-
-
-```{r}
-rf_wf_final_fit %>% pull_workflow_prepped_recipe()
 ```
 
